--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit
+pandas
 nltk
-spacy
 scikit-learn
 pdfminer.six
-pandas
+spacy==3.7.2
 openpyxl
+
+# Install the spaCy model directly
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
